Updated Partner content (partner #4). Updated css for welcome text width fix on mobile. Integrate new logo into navbar.

--- a/static/style.css
+++ b/static/style.css
@@ -297,6 +297,18 @@ thead {
 
 }
 @media (max-width: 576px) {
+    .welcome {
+        width: 100%;
+    }
+    
+    .content {
+        width: 95%;
+    }
+
+    .partner {
+        width: 95%;
+    }
+
     .carousel-caption {
         top: 40%;
     }
